examples/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filter_chain_match:
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http2_protocol_options:
                  allow_connect: true
                upgrade_configs:
                  - upgrade_type: CONNECT
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: [ "*" ]
                      routes:
                        - match:
                            connect_matcher: { }
                          route:
                            cluster: influxdb_cluster
                            upgrade_configs:
                              upgrade_type: CONNECT
                              connect_config: { }
                        - match:
                            prefix: "/"
                          route:
                            cluster: influxdb_cluster
                            prefix_rewrite: "/"
                            auto_host_rewrite: true
                            timeout: 10s
                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
  clusters:
    - name: influxdb_cluster
      connect_timeout: 10s
      type: STRICT_DNS
      load_assignment:
        cluster_name: influxdb_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: "us-east-1-1.aws.cloud2.influxdata.com"
                      port_value: 443
